Fixed some @use imports. Player name now has a global style to use the monospace font. Removed the game info component. Game page now displays only the time remaining at the top center so that the board and time are fully visible without scrolling. Time changes colors and size as time gets lower and pulses at 20 seconds and less.

--- a/src/components/game/GameBoard.module.scss
+++ b/src/components/game/GameBoard.module.scss
@@ -8,7 +8,6 @@
     display: grid;
     column-gap: 1em;
     row-gap: 1em;
-    padding: 2em;
     grid-template-columns: repeat(4, 10em);
 }
 
@@ -16,7 +15,6 @@
     display: grid;
     column-gap: 1em;
     row-gap: 1em;
-    padding: 2em;
     grid-template-columns: repeat(6, 10em);
 }
 
@@ -24,7 +22,6 @@
     display: grid;
     column-gap: 1em;
     row-gap: 1em;
-    padding: 2em;
     grid-template-columns: repeat(8, 10em);
 }
 
