--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,7 @@ html, body, #root {
 body{
   background-color: common.$c-white;
 }
+
+.playerName{
+  font-family: common.$mono-font;
+}
