--- a/src/pages/Game.module.scss
+++ b/src/pages/Game.module.scss
@@ -1,6 +1,69 @@
+@use '../common';
+
 .page{
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
+}
+
+.start{
+    margin-top: 1em;
+    width: 360px;
+    height: 120px;
+    font-size: 24pt;
+    border-radius: common.$rounded;
+    background-color: common.$c-dark-blue;
+    color: common.$c-white;
+}
+
+.start:hover{
+    box-shadow: common.$shadow;
+    background-color: common.$c-light-blue;
+    cursor: pointer;
+}
+
+.time{
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+
+    p{
+        margin: 0;
+    }
+}
+
+.timeStart{
+    color: common.$c-dark-green;
+    font-size: 14pt;
+}
+
+.timeMid{
+    color: common.$c-purple;
+    font-size: 18pt;
+}
+
+.timeEnd{
+    color: common.$c-dark-red;
+    font-size: 22pt;
+    animation: 1s infinite normal pop;
+}
+
+@keyframes pop{
+    0%,
+    100%{
+        font-size: 22pt;
+    }
+
+    25%,
+    75%{
+        font-size: 23pt;
+    }
+
+    50%{
+        font-size: 24pt;
+    }
 }
